Normalized tools.jar URL creation to support Unix environments.